--- a/style.css
+++ b/style.css
@@ -415,6 +415,12 @@ a {
 
 }
 
+@media (min-width 1024px) {
+    * {
+        align-items: center;
+    }
+} 
+
 /*Lock app: Volvo*/
 
 #introduktion {
