--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ a {
 }
 
 @media (min-width 1024px) {
-    * {
+    #poträtt, #whoami, #educationUX, #contact, #designvision, #educationFEP {
         align-items: center;
     }
 } 
