--- a/style.css
+++ b/style.css
@@ -416,8 +416,8 @@ a {
 }
 
 @media (min-width 1024px) {
-    #poträtt, #whoami, #educationUX, #contact, #designvision, #educationFEP {
-        align-items: center;
+    #poträtt, #designvision {
+        margin-left: 500px;
     }
 } 
 
