--- a/style.css
+++ b/style.css
@@ -418,6 +418,7 @@ a {
 @media (min-width 1024px) {
     #poträtt, #designvision {
         margin-left: 500px;
+        margin-right: 0px;
     }
 } 
 
