--- a/style.css
+++ b/style.css
@@ -416,11 +416,14 @@ a {
 }
 
 @media (min-width: 1024px) {
-    #poträtt, #designvision {
-        margin-left: 500px;
-        margin-right: 0px;
+    @media (min-width: 1024px) {
+    #poträtt, #designvision, #whoami, #educationUX, #contact, #educationFEP {
+        width: 80%;
+        max-width: 1200px;
+        margin: 0 auto;
     }
-} 
+}
+
 
 /*Lock app: Volvo*/
 
