--- a/style.css
+++ b/style.css
@@ -416,10 +416,11 @@ a {
 }
 
 @media (min-width: 1024px) {
-    @media (min-width: 1024px) {
     #poträtt, #designvision, #whoami, #educationUX, #contact, #educationFEP {
-        width: 80%;
-        max-width: 1200px;
+        width: 80%; /* Sätt bredden till 80% av föräldraelementet */
+        max-width: 1200px; /* Maximal bredd för elementen */
+        margin-left: auto; /* Detta gör att det skapas ett vänstermarginal för att trycka till vänster */
+        margin-right: auto; /* Detta gör att det skapas ett högermarginal för att trycka till höger */
     }
 }
 
