--- a/style.css
+++ b/style.css
@@ -416,8 +416,8 @@ a {
 
 @media (min-width: 1024px) {
     body {
-        padding-left: 100px;
-        padding-right: 100px;
+        margin-left: 100px;
+        margin-right: 100px;
     }
 }
 
