--- a/style.css
+++ b/style.css
@@ -421,7 +421,8 @@ a {
     }
 
     #introduction {
-        padding-left: 30px;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
 
