--- a/style.css
+++ b/style.css
@@ -424,6 +424,10 @@ a {
         padding-left: 200px;
         padding-right: 0px;
     }
+
+    #educationFEP {
+        margin-left: 20px;
+    }
 }
 
 
