--- a/style.css
+++ b/style.css
@@ -627,9 +627,11 @@ a {
     color: #404040;
     padding: 20px;
     border-radius: 30px;
-    width: 80%;
+    width: 60%;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.15);
     margin-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 #IGvolvo {
