--- a/style.css
+++ b/style.css
@@ -627,7 +627,7 @@ a {
     color: #404040;
     padding: 20px;
     border-radius: 30px;
-    width: 100%;
+    width: 700px;;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.15);
     margin-bottom: 20px;
     margin-right: 20x;
