--- a/style.css
+++ b/style.css
@@ -992,6 +992,7 @@ a {
 
     #volvoresearchsummary {
         width: 80%;
+        margin-right: 40px;
     }
 
     #sketchvolvo1, #sketchvolvo2, #sketchvolvo3 {
