--- a/myportfolio.css
+++ b/myportfolio.css
@@ -168,7 +168,7 @@ header {
     padding: 20px;
     margin: 20px;
     width: 100%;
-    min-height: 280px;
+    height: 290px;
 
 }
 
@@ -179,7 +179,7 @@ header {
     padding: 20px;
     margin: 20px;
     width: 100%;
-    min-height: 280px;
+    height: 290px;
 }
 
 .rubrikchallengesinsightsmyportfolio {
