--- a/style.css
+++ b/style.css
@@ -53,10 +53,11 @@ header {
 
 #educationFEP {
     border: #656565 solid 0.0625rem;
-    width: 38.9375rem;
+    width: 41.575rem;
     height: 17.5rem;
     margin: 0.625rem;
-    margin-right: 0.6rem;
+    margin-right: 0;
+    margin-left: 1.5%;
     margin-bottom: 1.25rem;
     margin-top: 0.625rem;
     text-align: center;
