--- a/style.css
+++ b/style.css
@@ -53,9 +53,10 @@ header {
 
 #educationFEP {
     border: #656565 solid 0.0625rem;
-    width: 40.075rem;
+    width: 41.05rem;
     height: 17.5rem;
-    margin: 0.625rem;
+    margin-left: 1.2rem;
+    margin-top: 0.625rem;
     text-align: center;
     border-radius: 0.9375rem;
     box-shadow: 0.25rem 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.25);
