--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ header {
     box-shadow: 0.25rem 0.25rem 0.5rem 0 rgba(0, 0, 0, 0.25);
 }
 
+
 #displaypresentationavmig {
     display: flex;
     align-items: flex-start;
@@ -154,7 +155,8 @@ a {
 }
 
 #designstudio1,
-#designstudio2 {
+#designstudio2, 
+#designstudio3 {
     position: relative;
     width: 18.75rem;
     height: 15.625rem;
@@ -165,7 +167,8 @@ a {
 }
 
 #designstudio1 img,
-#designstudio2 img {
+#designstudio2 img, 
+#designstudio3 img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -173,7 +176,8 @@ a {
 }
 
 #mellanrumdesignstudio1,
-#mellanrumdesignstudio2 {
+#mellanrumdesignstudio2,
+#mellanrumdesignstudio3 {
     position: absolute;
     top: 0.3125rem;
     left: 0.625rem;
@@ -188,14 +192,14 @@ a {
     margin-bottom: 0;
     background-color: white;
     padding: 0.625rem;
-    width: 12.5rem;
+    width: 11.5rem;
     border-radius: 0.625rem;
 }
 
 #saasinriktning {
     margin-left: 7.8125rem;
     margin-top: 6.5625rem;
-    width: 8rem;
+    width: 7.5rem;
     font-size: 1.125rem;
     background-color: white;
     padding: 0.625rem;
@@ -208,17 +212,37 @@ a {
     background-color: white;
     padding: 0.625rem;
     border-radius: 0.625rem;
-    width: 11.625rem;
+    width: 10.725rem;
 }
 
 #lainriktning {
     margin-left: 8.4375rem;
-    margin-top: 7.8125rem;
+    margin-top: 6.5625rem;
     font-size: 1.125rem;
-    width: 7rem;
+    width: 6.8rem;
     border-radius: 0.625rem;
     background-color: white;
     padding: 0.625rem;
+}
+
+#DizparcRubrik {
+    font-size: 1.125rem;
+    margin-left: 0.9375rem;
+    margin-bottom: 0;
+    background-color: white;
+    padding: 0.625rem;
+    width: 9.5rem;
+    border-radius: 0.625rem;
+}
+
+#DizparcInriktning {
+    margin-left: 7.8125rem;
+    margin-top: 6.5625rem;
+    width: 7rem;
+    font-size: 1.125rem;
+    background-color: white;
+    padding: 0.625rem;
+    border-radius: 0.625rem;
 }
 
 /* Programmeringsprojekt */
@@ -290,7 +314,7 @@ a {
     margin-bottom: 0;
     background-color: white;
     padding: 0.625rem;
-    width: 7rem;
+    width: 9rem;
     border-radius: 0.625rem;
 }
 
@@ -416,7 +440,6 @@ a {
         text-align: center;
     }
 
-    
 
     #minaprogrammeringsprojekt {
         margin-left: 1rem;
